--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "20.11.1",
+    "npm": "10.2.4"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
